<?xml version="1.0" encoding="utf-8"?>
<!--
SalaryCalc: android app to help user convert salary from/to many formats.
Copyright (C) 2014 Yankel Scialom.

This program is free software; you can redistribute it and/or
modify it under the terms of the GNU General Public License
as published by the Free Software Foundation; either version 2
of the License, or (at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software Foundation,
Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.

Author: Yankel Scialom (YSC) <yankel.scialom@mail.com>
-->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:stretchColumns="1" >

	<!--               ANNUAL               -->
	<!--  ANNUAL BT -->
	<TableRow>
		<Button
			android:id="@+id/annual_bt"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/annual_bt" />
		<EditText
			android:id="@+id/annual_bt_value"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="number"
			android:imeOptions ="actionDone"
			android:singleLine="true"
			android:hint="@string/hint" />
	</TableRow>

	<!--  ANNUAL AT -->
	<TableRow>
		<Button
			android:id="@+id/annual_at"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/annual_at" />
		<EditText
			android:id="@+id/annual_at_value"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="number"
			android:imeOptions ="actionDone"
			android:singleLine="true"
			android:hint="@string/hint" />
	</TableRow>


	<!--               MONTHLY               -->
	<!--  MONTHLY BT -->
	<TableRow>
		<Button
			android:id="@+id/monthly_bt"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/monthly_bt" />
		<EditText
			android:id="@+id/monthly_bt_value"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="number"
			android:imeOptions ="actionDone"
			android:singleLine="true"
			android:hint="@string/hint" />
	</TableRow>

	<!--  MONTHLY AT -->
	<TableRow>
		<Button
			android:id="@+id/monthly_at"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/monthly_at" />
		<EditText
			android:id="@+id/monthly_at_value"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="number"
			android:imeOptions ="actionDone"
			android:singleLine="true"
			android:hint="@string/hint" />
	</TableRow>


	<!--               HOURLY               -->
	<!--  HOURLY BT -->
	<TableRow>
		<Button
			android:id="@+id/hourly_bt"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/hourly_bt" />
		<EditText
			android:id="@+id/hourly_bt_value"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="numberDecimal"
			android:imeOptions ="actionDone"
			android:singleLine="true"
			android:hint="@string/hint" />
	</TableRow>

	<!--  HOURLY AT -->
	<TableRow>
		<Button
			android:id="@+id/hourly_at"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/hourly_at" />
		<EditText
			android:id="@+id/hourly_at_value"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="numberDecimal"
			android:imeOptions ="actionDone"
			android:singleLine="true"
			android:hint="@string/hint" />
	</TableRow>


	<!--               RESET               -->
	<TableRow>
		<Button
			android:id="@+id/reset"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_span="2"
			android:text="@string/reset" />
	</TableRow>
</TableLayout>
